Bug 771832 - File not found error for HTTP URL, can be fixed by a forced reload, r=hurley, a=lsblakk